--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: node setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x    
+
       - uses: actions/checkout@v2
         with: 
           repository: 'fraunhofer-iem/kpi-hierarchy-visualization'
           path: 'vis'
 
-      - run: ls -a
+      - run: |
+            cd vis
+            echo '[
+              {
+                "id": "A",
+                "name": "A",
+                "description": "",
+                "children": ["B", "C"],
+                "parents": []
+              },
+              {
+                "id": "B",
+                "name": "B",
+                "description": "",
+                "children": [],
+                "parents": ["A"]
+              },
+              {
+                "id": "C",
+                "name": "C",
+                "description": "",
+                "children": [],
+                "parents": ["A"]
+              },
+            ]' > kpiHierarchy.json
+            npm install
+            npm run export
+            cd ..
+            git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+            npm install gh-pages
+            npx gh-pages -d vis/out -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
