--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
               },
             ]' > kpiHierarchy.json
             npm install
+            npm install --save-dev @types/node
             npm run export
             cd ..
             git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
