--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
         with: 
           repository: 'fraunhofer-iem/kpi-hierarchy-visualization'
           path: 'vis'
+          
+      - uses: actions/checkout@v2
+        with: 
+          repository: 'DieserFelix/test-domain'
+          path: 'domain'
+          
 
       - run: |
             cd vis
@@ -46,9 +52,12 @@ jobs:
             echo 'Installing dependencies'
             npm install
             npm run export
+            
             cd ..
+            cd domain
+            
             git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
             npm install gh-pages
-            npx gh-pages -d vis/out -u "github-actions-bot <support+actions@github.com>"
+            npx gh-pages -d ../vis/out -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
