--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,15 +60,12 @@ jobs:
             npm install
             npm run export
             touch out/.nojekyll
-            cd out
-            ls -a
-            cd ..
 
             cd ..
             cd domain
             
             git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
             npm install gh-pages
-            npx gh-pages -d ../vis/out -u "github-actions-bot <support+actions@github.com>"
+            npx gh-pages -t -d ../vis/out -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
